@@ -1,8 +1,9 @@
-import java.util.ArrayList;
-public class Cancelado {
-        ArrayList<Documento> cancelados = new ArrayList<>();
+import java.util.LinkedList;
 
-        public void AgregarCancelados(Documento documento) {
+public class Cancelado {
+    LinkedList<Documento> cancelados = new LinkedList<>();
+
+    public void AgregarCancelados(Documento documento) {
         cancelados.add(documento);
     }
 
@@ -12,14 +13,13 @@ public class Cancelado {
             System.out.println("No hay documentos cancelados.\n");
         } else {
             for (Documento documento : cancelados) {
-                System.out.println("Documento: " + documento+"\n");
+                System.out.println("Documento: " + documento + "\n");
             }
         }
     }
 
-        public Documento RestaurarUltimo() {
+    public Documento RestaurarUltimo() {
         if (cancelados.isEmpty()) return null;
-        return cancelados.remove(cancelados.size() - 1);
+        return cancelados.removeLast();
     }
-
 }
